--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -20,7 +20,14 @@
         <script>require('initialize');</script>
 
     </head>
-    <body>
-
+    <body class="container">
+        <div class="alert alert-success">This skeleton includes bootstrap.</div>
+        <div class="row">
+            <div class="col-xs-6 col-md-8">.col-xs-12 .col-md-8</div>
+            <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+            <button type="button" class="btn btn-default btn-lg">
+              <span class="glyphicon glyphicon-star"></span> Star
+            </button>
+        </div>
     </body>
 </html>
