- Added jade and less

--- a/app/assets/page1.html
+++ b/app/assets/page1.html
@@ -17,11 +17,10 @@
     <script>require('initialize');</script>
   </head>
   <body class="container">
-    <div class="alert alert-success">This skeleton includes bootstrap</div>
-    <div class="row">
-      <div class="col-xs-6 col-md-8">.col-xs-12 .col-md-8</div>
-      <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-      <button type="button" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-star">Star</span></button>
+    <div class="alert alert-success">
+      This skeleton includes bootstrap
+      
     </div>
+    <div>This is page 1</div>
   </body>
 </html>
